# IDS-Magisk-Module

./: .gitignore  LICENSE  README.md  customize.sh  logcat.sh  main.sh  module.prop  notify.sh  service.sh  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  improvement.md  playground.md
.github/workflows/: rust.yml
IDSCore/: Cargo.toml
IDSCore/src/: main.rs
common/: functions.sh
