[package]
name = "IDSCore"
version = "0.1.0"
edition = "2021"

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-port-scanner = "0.1.4"
async-std = "1.13.0"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.33"
futures = "0.3.31"
time = "0.3.47"
